--- a/style.css
+++ b/style.css
@@ -1,9 +1,71 @@
 /* Google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+/* Shared Styles  */
+.btn-primary{
+    
+}
 * {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
+
+/* Header Start */
+
+header {
+    background-color: rgb(255, 245, 232);
+    padding: 50px 240px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul {
+    display: flex;
+}
+
+ul>li {
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+a {
+
+    text-decoration: none;
+    color: black;
+}
+
+.nav-logo{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: black;
+}
+
+/* Header End */
+
+/* Banner Contents start */
+
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+    color: black;
+}
+
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: auto;
+}
+
+.banner-decription{
+    color:rgb(156, 156, 156);
+}
+/* Banner Contents end */
