--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     cursor: pointer;
 }
 
+.text-light-gray {
+    color: rgb(156, 156, 156);
+}
+
 * {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
@@ -73,9 +77,7 @@ a {
     margin: 0px auto;
 }
 
-.banner-decription {
-    color: rgb(156, 156, 156);
-}
+
 
 .banner img {
     margin-top: 20px;
@@ -86,8 +88,7 @@ a {
 
 main{
     max-width: 1440px;
-    margin: 0 auto;
-    background-color: antiquewhite;
+    margin: 70px auto;
 }
 
 
@@ -151,8 +152,16 @@ main{
         padding: 20px;
     }
 
-    nav {
+    nav, .teams-container {
         flex-direction: column;
+    }
+
+    .team-img-container{
+    grid-template-columns: 1fr;
+
+    }
+    .teams-content{
+        padding: 0px 20px;
     }
 
 }
@@ -164,7 +173,7 @@ main{
         padding: 50px;
     }
 
-    nav {
+    nav, .teams-container {
         flex-direction: column;
     }
 }
