--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a {
     color: black;
 }
 
-.nav-logo {
+.section-title {
     font-size: 2.8rem;
     font-weight: 700;
     color: black;
@@ -107,10 +107,6 @@ main{
 
 .teams-content{
     padding: 0px 70px;
-}
-
-.teams-title{
-    font-size: 2.8rem;
 }
 
 .span-1{
